--- a/index.html
+++ b/index.html
@@ -101,10 +101,22 @@
           </div>
           <div class="row">
             <div class="col-1-of-2">
-              text content
+              <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+              <p class="parragraph u-margin-bottom-medium">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem repudiandae, ab mollitia quibusdam odit est reiciendis? Minus recusandae totam nobis fugiat. Ab sequi perferendis odit labore magnam a assumenda quis!
+              </p>
+              <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+              <p class="parragraph u-margin-bottom-medium">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint consequuntur explicabo modi officia, a ducimus iste! Reiciendis quos id cupiditate facilis magnam voluptatem sint excepturi iusto porro. Error, atque, iste.
+              </p>
+              <a href="#" class="btn-text">Learn more &rarr;</a>
             </div>
              <div class="col-1-of-2">
-              text content
+              <div class="composition">
+                <img src="images/adventure-1.jpg" alt="" class="composition__photo composition__photo--p1">
+                <img src="images/adventure-2.jpg" alt="" class="composition__photo composition__photo--p2">
+                <img src="images/adventure-3.jpg" alt="" class="composition__photo composition__photo--p3">
+              </div>
             </div>
           </div>
         </section>
