--- a/index.html
+++ b/index.html
@@ -394,6 +394,27 @@
             <a href="#" class="btn btn--orange">Checkout all tours</a>
           </div>
         </section>
+
+        <section class="section-stories">
+          <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+            We make people genuinely happy
+            </h2>
+          </div>
+          <div class="row">
+            <div class="story">
+              <figure class="story__shape">
+                <img src="images/person-1.jpg" alt="Person on a tour" class="story__img">
+                <figcaption class="story__caption">Rick Morty</figcaption>
+              </figure>
+              <div class="story__text">
+                <h3 class="heading-tertiary u-margin-bottom-small">I had the best weekend ever with my family</h3>
+                <p class="parragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum suscipit atque quod eius voluptatem fugit. Quis repellendus, quo quasi odit atque nihil. Nisi quos, accusamus repellat veritatis quam excepturi, soluta!</p>
+              </div>
+            </div>
+          </div>
+
+        </section>
       </main>
   </body>
 </html>
